--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -30,10 +30,10 @@
     "spacing": 10
   },
   "sway/language": {
-    "format": " {}"
+    "format": "<span size='large' rise='-1500'>󰌌</span> {}"
   },
   "custom/music": {
-    "format": " {}",
+    "format": "<span size='large' rise='-1500'>󰝚</span> {}",
     "escape": true,
     "interval": 5,
     "tooltip": false,
@@ -43,11 +43,11 @@
   },
   "clock": {
     "tooltip-format": "<tt>{calendar}</tt>",
-    "format": " {:%R   %d %b, %a}"
+    "format": "<span size='large' rise='-1500'>󰥔</span> {:%R  <span size='large' rise='-1500'>󰃭</span> %d %b, %a}"
   },
   "backlight": {
     "device": "intel_backlight",
-    "format": "{percent}% {icon}",
+    "format": "{percent}% <span size='large' rise='-1500'>{icon}</span>",
     "format-icons": ["", "", "", "", "", "", "", "", ""]
   },
   "battery": {
@@ -55,27 +55,27 @@
       "warning": 30,
       "critical": 15
     },
-    "format": "{capacity}% {icon}",
-    "format-charging": "{capacity}% ",
-    "format-plugged": "{capacity}% ",
-    "format-alt": "{time} {icon}",
-    // "format-icons": ["", "", "", "", "", "", "", "", "", "", "", ""]
-    "format-icons": ["", "", "", "", ""]
+    "format": "{capacity}% <span size='large' rise='-1500'>{icon}</span>",
+    "format-charging": "{capacity}% <span size='large' rise='-1500'></span>",
+    "format-plugged": "{capacity}% <span size='large' rise='-1500'></span>",
+    "format-alt": "{time} <span size='x-large' rise='-1500'>{icon}</span>",
+    "format-icons": ["", "", "", "", "", "", "", "", "", "", "", ""]
+    //"format-icons": ["", "", "", "", ""]
   },
   "idle_inhibitor": {
-    "format": "{icon}",
+    "format": "<span size='large' rise='-1500'>{icon}</span>",
     "format-icons": {
-      "activated": "",
-      "deactivated": ""
+      "activated": "󰈈",
+      "deactivated": "󰈉"
     }
   },
   "pulseaudio": {
     // "scroll-step": 1, // %, can be a float
-    "format": "{volume}% {icon}  {format_source}",
-    "format-bluetooth": "{volume}% {icon} {format_source}",
-    "format-bluetooth-muted": " {icon} {format_source}",
+    "format": "{volume}% <span size='large' rise='-1500'>{icon}</span> {format_source}",
+    "format-bluetooth": "{volume}% <span size='large' rise='-1500'>{icon}</span> {format_source}",
+    "format-bluetooth-muted": " <span size='large' rise='-1500'>{icon}</span> {format_source}",
     "format-muted": " {format_source}",
-    "format-source": "{volume}% ",
+    "format-source": "{volume}% <span size='large' rise='-1500'></span>",
     "format-source-muted": "",
     "format-icons": {
       "headphone": "",
@@ -83,53 +83,58 @@
       "headset": "",
       "phone": "",
       "portable": "",
-      "car": "",
+      "car": "󰄋",
       "default": ["", "", ""]
     },
     "on-click": "pavucontrol"
   },
   "power-profiles-daemon": {
-    "format": "{icon}",
+    "format": "<span size='large' rise='-1500'>{icon}</span>",
     "tooltip-format": "power profile: {profile}\ndriver: {driver}",
     "tooltip": false,
     "format-icons": {
       "default": "",
       "performance": "",
-      "balanced": "",
-      "power-saver": ""
+      "balanced": "󰗑",
+      "power-saver": "󰌪"
     }
   },
   "custom/lock": {
     "tooltip": false,
     "on-click": "swaylock & systemctl suspend",
-    "format": ""
+    "format": "<span size='large' rise='-1500'>󰌾</span>"
   },
   "custom/power": {
     "tooltip": false,
     "on-click": "wlogout --protocol layer-shell -b 6",
-    "format": ""
+    "format": "<span size='large' rise='-1500'>󰐥</span>"
   },
   "sway/scratchpad": {
-    "format": "{count} {icon}",
+    "format": "{count} <span size='large' rise='-1500'>{icon}</span>",
     "show-empty": false,
-    "format-icons": [""],
+    "format-icons": ["󰖲"],
     "tooltip": true,
     "tooltip-format": "{app}: {title}"
   },
   "network": {
-    "format-wifi": "  {essid}",
-    "format-ethernet": " {essid}",
-    "format-linked": "{ifname} (no ip) ",
-    "format-disconnected": "睊 disconnected",
+    "format-wifi": "<span size='large' rise='-1500'>{icon}</span> {essid}",
+    "format-ethernet": "<span size='large' rise='-1500'>󰈀</span>  {essid}",
+    "format-linked": "{ifname} (no ip)  <span size='large' rise='-1500'></span>",
+    "format-disconnected": "<span size='large' rise='-1500'>󰤮</span>  disconnected",
+    "format-disabled": "<span size='large' rise='-1500'>󰤭</span>  disabled",
     "tooltip-format-wifi": "signal strenght: {signalstrength}% | down speed: {bandwidthdownbits}, up speed: {bandwidthupbits}",
-    "on-click": "~/.local/bin/rofi-wifi-menu"
+    "on-click": "~/.local/bin/rofi-wifi-menu",
+    "format-icons": ["󰤟", "󰤢", "󰤥", "󰤨"],
+    "max-length": 20
   },
   "bluetooth": {
-    "format": "{icon}",
+    "format": "<span size='large' rise='-1500'>{icon}</span> {status}",
+    "format-connected": "<span size='large' rise='-1500'>{icon}</span> {device_alias}",
+    "format-connected-battery": "<span size='large' rise='-1500'>{icon}</span> {device_alias} {device_battery_percentage}%",
     "on-click": "~/.local/bin/rofi-bluetooth-menu",
     "format-icons": {
-      "enabled": "",
-      "disabled": "󰂲"
+      "on": "",
+      "off": "󰂲"
     }
   }
 }
