--- a/sway/.config/sway/config.d/60-bindings-volume.conf
+++ b/sway/.config/sway/config.d/60-bindings-volume.conf
@@ -1,14 +1,4 @@
-# Key bindings to control pipewire or pulseaudio volume with pactl.
-# Displays a notification with the current state if /usr/bin/notify-send is available
-#
-# Volume increase/decrease step can be customized by setting the `$volume_step`
-# variable to a numeric value before including the file.
-# Maximum volume boost level can be set with the `$volume_limit` variable.
-#
-# Requires:     pulseaudio-utils
-# Recommends:   libnotify
-
-set $volume_helper_cmd /usr/libexec/sway/volume-helper
+set $volume_helper_cmd ~/.local/bin/volume-helper
 
 # Allow volume controls even if the screen is locked
 bindsym --locked {
