--- a/swaylock/.config/swaylock/config
+++ b/swaylock/.config/swaylock/config
@@ -3,8 +3,8 @@
 #
 # Image path supports environment variables and shell expansions,
 # e.g. image=$HOME/Pictures/default.png
-# image=/home/filippofantinato/Pictures/wallpaper/cloud.png
-# scaling=fill
+image=/home/filippofantinato/Pictures/wallpaper/cloud-dark.jpg
+scaling=fill
 
 color=1e1e2e
 bs-hl-color=f5e0dc
