--- a/code/.config/Code/User/settings.json
+++ b/code/.config/Code/User/settings.json
@@ -161,5 +161,11 @@
     "editor.rulers": [
         120
     ],
-    "haskell.manageHLS": "PATH"
+    "haskell.manageHLS": "PATH",
+    "[typst]": {
+        "editor.wordSeparators": "`~!@#$%^&*()=+[{]}\\|;:'\",.<>/?"
+    },
+    "[typst-code]": {
+        "editor.wordSeparators": "`~!@#$%^&*()=+[{]}\\|;:'\",.<>/?"
+    }
 }
