--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -152,7 +152,8 @@
   },
   "sway/workspaces": {
     "persistent-workspaces": {
-      "1": ["eDP-1"]
+      "1": ["eDP-1"],
+      "2": ["eDP-1"]
     }
   },
   "sway/mode": {
